# type1-opt-out

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  app.js:Zone.Identifier  dump.rdb  package-lock.json  package.json  pyproject.toml
.github/workflows/: integrate.yml
app/views/: NHS-app-view.html  check-your-status-opt1-result-no.html  check-your-status-type1.html  index.html  layout.html  nhsuk-opt-out-of-sharing.html
app/views/Archive/: answer-yes.html  make-your-choice.html  make-your-choicetest.html
app/views/type-1-content/: when-your-choice-does-not-apply.html
docs/views/: layout.html
docs/views/examples/branching-app/: answer-yes.html  index.html
docs/views/examples/passing-data/: passing-data-enter-security-code.html  passing-data-question-dob.html  passing-data-question-know-nhs-number.html  passing-data-question-nhs-number.html
src/: package.json
src/backend/test/: redis_test.py
src/config/: package-lock.json  package.json
src/config/data/: db.json
src/config/src/: App.scss  App.tsx  TestDataPage.tsx  main.tsx
src/config/src/__tests__/: App.test.tsx
src/config/src/components/: AddPatient.tsx  Breadcrumbs.tsx  Home.tsx  Patients.tsx  PatientsList.tsx  ServiceHeader.tsx  TestDataPage.tsx  UpdatePatient.tsx
src/frontend/: index.html  jest.config.ts  package.json  tsconfig.json
src/frontend/src/: App.scss  App.tsx  setupTests.ts
src/prototype/: app.js  frontend_index.html  gulpfile.js  jest.config.js  package-lock.json  package.json
src/prototype/app/: routes.js
src/test/: test_prototype_links.py
(+116 files in other folders)
