[tool.poetry]
name = "type1-opt-out"
version = "0.1.0"
description = "NHS Digital Type 1 Opt-outs"
authors = ["Nick Etuk <nick.etuk1@nhs.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.13"
requests = "^2.28.0"
setuptools = "^62.6.0"
spine-aws-common = {url = "https://github.com/NHSDigital/spine-core-aws-common/releases/download/v0.1.2/spine_aws_common-0.1.2-py3-none-any.whl"}
redis-py-cluster = "^2.1.3"
mock = "^4.0.3"
fakeredis = "^1.8.1"
pytest = "^7.1.2"
bs4 = "^0.0.1"

[tool.poetry.group.dev.dependencies]


[tool.poetry.dev-dependencies]
black = "^22.3.0"
aws-lambda-powertools = "^1.26.2"
flake8 = "^4.0.1"
mypy = "^0.961"
icecream = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
